--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: locale_plus
 description: LocalePlus allows easy access to native device locale data in Flutter apps. Includes language, country code, time zone, and number formatting preferences.
 version: 1.6.0+1
 repository: https://github.com/gokberkbar/locale_plus
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -11,13 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
-  plugin_platform_interface: ^2.0.2
-  universal_io: ^2.0.4
+  plugin_platform_interface:
+    git: https://github.com/kumsumit/plugin_platform_interface.git
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints: ^5.0.0
 
 flutter:
   plugin:
